force-app/main/default/objects/ProfileReview__c/ProfileReview__c.object-meta.xml
<CustomObject>
    <label>Ревью Анкеты</label>
    <nameField>
        <label>ProfileReview Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProfileReviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>