force-app/main/default/objects/ProfileReview__c/fields/ErrorFields__c.field-meta.xml
<CustomField>
    <fullName>ErrorFields__c</fullName>
    <label>Неверные поля</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>