force-app/main/default/objects/ProfileReview__c/fields/ProfileId__c.field-meta.xml
<CustomField>
    <fullName>ProfileId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Анкета</label>
    <referenceTo>Profile__c</referenceTo>
    <relationshipName>ProfileReviews</relationshipName>
    <type>Lookup</type>
</CustomField>