force-app/main/default/objects/ProfileReview__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ревьюер</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProfileReviews</relationshipName>
    <type>Lookup</type>
</CustomField>